--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,10 @@ services:
     name: pbu-web
     env: node
     plan: starter
-    repo: https://github.com/you/pbu
-    rootDir: apps/web
-    buildCommand: npm ci && npm run build
-    startCommand: npm run start
+    repo: https://github.com/kbeans30/pbu-jersey
+    rootDir: .
+    buildCommand: unzip -o pbu_repo_modified.zip -d . && cd apps/web && npm install && npm run build
+    startCommand: cd apps/web && npm run start
     autoDeploy: true
     envVars:
       - key: API_BASE_URL
@@ -24,15 +24,14 @@ services:
         value: "#FFD700"
       - key: NEXT_PUBLIC_CTA_COLOR
         value: "#FF4500"
-
   - type: web
     name: pbu-api
     env: python
     plan: starter
-    repo: https://github.com/you/pbu
-    rootDir: apps/api
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    repo: https://github.com/kbeans30/pbu-jersey
+    rootDir: .
+    buildCommand: unzip -o pbu_repo_modified.zip -d . && cd apps/api && pip install -r requirements.txt
+    startCommand: cd apps/api && uvicorn main:app --host 0.0.0.0 --port 10000
     autoDeploy: true
     envVars:
       - key: DATABASE_URL
@@ -44,13 +43,9 @@ services:
           name: pbu-redis
           type: redis
           property: connectionString
-      - key: S3_BUCKET
+      - key: SUPABASE_URL
         sync: false
-      - key: S3_REGION
-        sync: false
-      - key: S3_ACCESS_KEY
-        sync: false
-      - key: S3_SECRET_KEY
+      - key: SUPABASE_API_KEY
         sync: false
       - key: TWILIO_ACCOUNT_SID
         sync: false
@@ -62,20 +57,18 @@ services:
         sync: false
       - key: PRINTFUL_STORE_ID
         sync: false
-      - key: API_BASE_URL
-        fromService:
-          name: pbu-api
-          type: web
-          property: url
-
+      - key: PRINTFUL_VARIANT_ID
+        sync: false
+      - key: PRINTFUL_CHEST_PATCH_URL
+        sync: false
   - type: worker
     name: pbu-worker
     env: python
     plan: starter
-    repo: https://github.com/you/pbu
-    rootDir: apps/worker
-    buildCommand: pip install -r requirements.txt
-    startCommand: rq worker -u $REDIS_URL pbu-jobs
+    repo: https://github.com/kbeans30/pbu-jersey
+    rootDir: .
+    buildCommand: unzip -o pbu_repo_modified.zip -d . && cd apps/worker && pip install -r requirements.txt
+    startCommand: cd apps/worker && rq worker -u $REDIS_URL pbu-jobs
     autoDeploy: true
     envVars:
       - key: DATABASE_URL
@@ -87,23 +80,21 @@ services:
           name: pbu-redis
           type: redis
           property: connectionString
-      - key: S3_BUCKET
+      - key: SUPABASE_URL
         sync: false
-      - key: S3_REGION
+      - key: SUPABASE_API_KEY
         sync: false
-      - key: S3_ACCESS_KEY
+      - key: TWILIO_ACCOUNT_SID
         sync: false
-      - key: S3_SECRET_KEY
+      - key: TWILIO_AUTH_TOKEN
+        sync: false
+      - key: TWILIO_FROM
         sync: false
       - key: PRINTFUL_API_KEY
         sync: false
       - key: PRINTFUL_STORE_ID
         sync: false
-
-databases:
-  - name: pbu-db
-    plan: starter
-
-redis:
-  - name: pbu-redis
-    plan: starter
+      - key: PRINTFUL_VARIANT_ID
+        sync: false
+      - key: PRINTFUL_CHEST_PATCH_URL
+        sync: false
