--- a/render.yaml
+++ b/render.yaml
@@ -97,8 +97,7 @@ services:
     name: pbu-redis
     plan: starter
     ipAllowList:
-      - source: services
-
+   - source: 0.0.0.0/0
 databases:
   - name: pbu-db
     plan: starter
